2017-05-27  Natalia Portillo  <claunia@claunia.com>

	* Statistics.cs:
	* DiscImageChef.Core.csproj: Refactor: Move Statistics to
	  Core.

2017-05-27  Natalia Portillo  <claunia@claunia.com>

	* ImageFormat.cs:
	* DiscImageChef.Core.csproj: Refactor: Move ImageFormat to
	  Core.

2017-05-27  Natalia Portillo  <claunia@claunia.com>

	* PluginBase.cs:
	* DiscImageChef.Core.csproj: Refactor: Moved PluginBase to
	  Core.

2017-05-27  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Core.csproj:
	* AssemblyInfo.cs: Added project for separation of engine from
	  CLI.
